--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -1,9 +1,3 @@
-@mixin font-smoothing($value: on) {
-  @if $value == on {
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-  } @else {
-    -moz-osx-font-smoothing: auto;
-    -webkit-font-smoothing: subpixel-antialiased;
-  }
-}
+$base-text-size: 16px;
+$base-font-family: 'Droid Sans Mono', monospace;
+$main-header-font: 'Audiowide', sans-serif;
