--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -1,14 +1,17 @@
 @import 'utility';
 
-$base-text-size: 16px;
-$base-font-family: sans-serif;
-
 html {
   text-size-adjust: 100%;
+  height: 100%;
 }
 
 body {
-  @include font-smoothing(on);
   margin: 0;
-  font: $base-text-size / 1 $base-font-family;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font: 16px / 1 sans-serif;
+  background-color: hsla(232, 7%, 20%, 1);
+  border: solid 1px goldenrod;
+  min-height: 100%;
 }
