all 3 sliders working with Dan's help on the alpha. He shall here to fore be known as the Alpha Male

--- a/src/components/Sliders.scss
+++ b/src/components/Sliders.scss
@@ -48,7 +48,7 @@ input.root {
     cursor: pointer;
     box-shadow: 0.05em 0.05em 0.15em hsla(210, 1%, 50%, 0.5), 0 0 1px hsla(210, 1%, 50%, 0.5);
     /*background: hsla(225, 7%, 79%, 1);*/
-    background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+    // background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
     border-radius: 1.3px;
     border: 0.15px solid #010101;
   }
@@ -58,7 +58,7 @@ input.root {
     cursor: pointer;
     box-shadow: 0.05em 0.05em 0.15em hsla(210, 1%, 50%, 0.5), 0 0 1px hsla(210, 1%, 50%, 0.5);
     /*background: hsla(225, 7%, 79%, 1);*/
-    background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+    // background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
     border-radius: 1.3px;
     border: 0.15px solid #010101;
   }
@@ -68,7 +68,7 @@ input.root {
     cursor: pointer;
     box-shadow: 0.05em 0.05em 0.15em hsla(210, 1%, 50%, 0.5), 0 0 1px hsla(210, 1%, 50%, 0.5);
     /*background: hsla(225, 7%, 79%, 1);*/
-    background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+    // background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
     border-radius: 1.3px;
     border: 0.15px solid #010101;
   }
