--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -6,7 +6,6 @@ h1 {
 }
 
 div {
-  border: solid 1px goldenrod;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +41,11 @@ h2 {
   display: flex;
   color: hsla(225, 7%, 79%, 1);
   font-family: $base-font-family, monospace;
-  font-size: 1em;
+  font-size: 1.25em;
+}
+
+ul {
+  list-style-type: none;
 }
 
 form {
